[package]
name = "avanza-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.7", features=["json"]}
wiremock = "0.5.8"
serde = "1.0.131"
serde_json = "1.0.73"
tokio = { version = "1.14.0", features = ["macros"] }
tokio-test = "0.4.2"
envy="0.4.2"