[package]
name = "avanza"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Ante Wall"]
description = "Avanza Unofficial RUST API Client"
repository = "https://github.com/AnteWall/avanza-rs"
keywords = ["avanza", "finance", "api", "client", "trading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.7", features=["json"]}
wiremock = "0.5.8"
serde = "1.0.131"
serde_json = "1.0.73"
tokio = { version = "1.14.0", features = ["macros"] }
tokio-test = "0.4.2"
envy="0.4.2"